fixed horizontal scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,15 +26,13 @@ body {
     rgb(var(--background-start-rgb));
 } */
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  width: 100vw;
-
 }
 
 .wrapper {
-  @apply w-full md:w-[40px] flex md:flex-col fixed bottom-0 md:right-0 md:bottom-[10%]
+  @apply w-full md:w-[40px] flex md:flex-col fixed bottom-0 md:right-0 md:bottom-[10%];
 }
-
